// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary multiple expenses correct 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $536,363.63
  </h1>
</div>
`;

exports[`should render ExpensesSummary single expense correct 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;
